k8s/grabber.yml
apiVersion: apps/v1
kind: Deployment
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: grabber
  template:
    metadata:
      labels:
        app: grabber
      namespace: lacrosse-weather
    spec:
      containers:
        - env:
            - name: EMAIL
              valueFrom:
                secretKeyRef:
                  key: email
                  name: grabber
            - name: PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: grabber
            - name: SENSORMAIN
              valueFrom:
                secretKeyRef:
                  key: sensormain
                  name: grabber
            - name: SENSOROUTSIDE
              valueFrom:
                secretKeyRef:
                  key: sensoroutside
                  name: grabber
            - name: TIMEZONE
              valueFrom:
                secretKeyRef:
                  key: timezone
                  name: grabber
            - name: TZ
              valueFrom:
                secretKeyRef:
                  key: timezone
                  name: grabber
          image: harbor.internal.techdrabble.com/library/grabber:latest
          imagePullPolicy: Always
          name: grabber
          ports:
            - containerPort: 3000
              name: grabber
              protocol: TCP
          resources: {}
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
