k8s/svc-grafana.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: grafana
    app: grafana
  name: grafana
spec:
  ports:
    - name: grafana
      port: 3000
      protocol: TCP
      targetPort: grafana
  selector:
    app: grafana
  sessionAffinity: None
  type: ClusterIP
