k8s/svc-influxdb.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: influxdb
    app: influxdb
  name: influxdb
  namespace: lacrosse-weather
spec:
  ports:
    - name: influxdb
      port: 8086
      protocol: TCP
      targetPort: influxdb
  selector:
    app: influxdb
  sessionAffinity: None
  type: ClusterIP
